# sofima

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  _version.py  coarse_registration.py  flow_field.py  flow_utils.py  map_utils.py  mesh.py  pyproject.toml  requirements.txt  setup.cfg  sofima_env.sh  stitch_elastic.py  stitch_rigid.py  tmp.py  warp.py  warp_test.py  zarr_processor.py  zarr_utils.py
decorators/: __init__.py  affine.py  affine_test.py  flow.py  flow_test.py  maps.py  maps_test.py  warp.py  warp_test.py
notebooks/: em_alignment.ipynb  em_stitching.ipynb  liconn_inplane_stitching.ipynb
pipeline/: flow_config.py  flow_config_test.py  mesh_config.py  warp_config.py
processor/: __init__.py  client_utils.py  flow.py  flow_test.py  maps.py  mesh.py  warp.py
processor/defaults/: em_2d.py
tests/: client_utils_test.py  flow_field_test.py  flow_utils_test.py  map_utils_test.py  mesh_test.py  warp_test.py
zarr/: zarr_io.py  zarr_register_and_fuse_3d.py
