[metadata]
name = sofima
version = 0.1
author = Michal Januszewski
author_email = mjanusz@google.com
description = Scalable Optical Flow-based Image Montaging and Alignment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/google-research/sofima
project_urls =
    Bug Tracker = https://github.com/google-research/sofima/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
  = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
