[metadata]
name = sofima
author = Michal Januszewski
author_email = mjanusz@google.com
description = Scalable Optical Flow-based Image Montaging and Alignment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/google-research/sofima
project_urls =
    Bug Tracker = https://github.com/google-research/sofima/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
  sofima = .
packages = sofima
python_requires = >=3.6
install_requires =
  connectomics
  dataclasses-json>=0.5.6
  absl-py>=0.9.0
  jax>=0.2.25
  numpy>=1.21.5
  opencv-python>=4.5.5.62
  scipy>=1.2.3
  scikit-image>=0.17.2

[options.packages.find]
where = .
